# python-project-lvl1

./: .travis.yml  README.md  pyproject.toml
brain_games/: Makefile  cli.py
brain_games/scripts/: brain_games.py
keksite_brain_games.egg-info/: PKG-INFO  SOURCES.txt
