[tool.poetry]
name = "keksite_brain_games"
version = "0.1.0"
description = ""
authors = ["keksite <keksite@mail.ru>"]
packages = [
        { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "3.6.4"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
